tests/snapshots/run_wpt_conformance__onnx_argMax_float16_4D_tensor__axis_3__all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "arg_min_max.https.any.js",
    "argMax float16 4D tensor, axis=3, all options",
    "onnx",
    "PASS",
)
